--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <script src="js/jquery.js"></script>
+  <script src="js/lib/jquery-3.1.1.js"></script>
   <script src="js/jquery-migrate-1.2.1.js"></script>
 
   <!--[if lt IE 9]>
