--- a/index.html
+++ b/index.html
@@ -35,32 +35,21 @@
   <header>
     <div id="stuck_container" class="stuck_container">
       <nav class="nav">
-        <ul class="sf-menu" data-type="navbar">
+        <ul class="sf-menu" data-type="navbar"style>
           <li class="active">
-            <a href="./">Home</a>
+            <a href="home.html">Home</a>
           </li>
           <li>
             <a href="about.html">About</a>
           </li>
           <li>
             <a href="services.html">Services</a>
-            <ul>
+            <ul style="z-index:1000;">
               <li>
                 <a href="#">Indoor Studio Locations</a>
               </li>
               <li>
                 <a href="#">Outdoor Shooting</a>
-                <ul>
-                  <li>
-                    <a href="#">Lorem</a>
-                  </li>
-                  <li>
-                    <a href="#">Dolor</a>
-                  </li>
-                  <li>
-                    <a href="#">Sit amet</a>
-                  </li>
-                </ul>
               </li>
               <li>
                 <a href="#">Facilities and Services</a>
