--- a/home.html
+++ b/home.html
@@ -186,8 +186,8 @@
   <div class="map">
     <div id="google-map" class="map_model"></div>
     <ul class="map_locations">
-      <li data-x="-73.9874068" data-y="40.638000">
-        <p>9863 - 9867 Mill Road, Cambridge, MG09 99HT</p>
+      <li data-x="22.4538082" data-y="88.2827606">
+        <p>Bagpota, Kolkata, West Bengal 700141</p>
       </li>
     </ul>
   </div>
