--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container brand_container">
           <div class="top-panel">
             <ul class="list">
-              <li><span class="fa fa-map-marker"></span> 9863 - 9867 Sample Address</li>
+              <li><span class="fa fa-map-marker"></span>Bagpota, Kolkata, West Bengal 700141</li>
               <li><a href="callto:#"><span class="fa fa-phone"></span>+91 9739988366</a></li>
               <!--<li><a href="#"><span class="fa fa-child"></span>login or register</a></li>-->
             </ul>
@@ -316,12 +316,8 @@
         <div class="grid_3">
           <h5>Contacts</h5>
           <address class="addr">
-            <p>9863 - 9867 Mill Road,<br>Sample Address, Kolkata</p>
-            <p>Freephone:  <a href="callto:#">+1 800 559 6580</a></p>
-          </address>
-          <address class="addr">
-            <p>9870 St Vincent Place,<br>Sample Address, Kolkata</p>
-            <p>Freephone: <a href="callto:#">+1 800 559 6580</a></p>
+            <p>Bagpota, Kolkata, West Bengal 700141</p>
+            <p>Freephone:  <a href="callto:#">+91 9739988366</a></p>
           </address>
         </div> 
         <div class="grid_5">
