added custom marker for map

--- a/index.html
+++ b/index.html
@@ -406,7 +406,8 @@
 
         var marker = new google.maps.Marker({
             position: chitrayan,
-            map: map
+            map: map,
+            icon: 'images/gmap_marker.png'
         });
     }
 </script>
