--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <title>Home</title>
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no"/>
+    <meta property="fb:app_id"        content="1241778969245906" />
+    <meta property="og:url"           content="http://www.chitrayanfilmstudio.com" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Chitrayan Film Studio" />
+    <meta property="og:description"   content="Film Studio in Kolkata" />
+    <meta property="og:image"         content="http://www.chitrayanfilmstudio.com/images/parallax1.jpg" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/camera.css">
@@ -29,6 +34,14 @@
     <!--<script src='http://maps.google.com/maps/api/js?key=AIzaSyBwLBvjNDEkLkboMNpLY_E_VTaCm-XxRLc'></script>-->
 </head>
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8&appId=1241778969245906";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="page">
     <!--========================================================
                               HEADER
@@ -379,12 +392,10 @@
                 </div>
             </div>
             <!-- {%FOOTER_LINK} -->
+            <div class="fb-share-button" data-href="http://www.chitrayanfilmstudio.com" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.chitrayanfilmstudio.com%2F&amp;src=sdkpreparse">Share now</a></div>
         </div>
     </footer>
 </div>
-
-<script src="js/utility/pageLoader.js"></script>
-<script src="js/utility/script.js"></script>
 <script defer src ="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwLBvjNDEkLkboMNpLY_E_VTaCm-XxRLc&callback=initMap">
 </script>
 <script>
@@ -411,5 +422,25 @@
         });
     }
 </script>
+<!--<script>
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId      : '1241778969245906',
+            xfbml      : true,
+            version    : 'v2.8'
+        });
+        FB.AppEvents.logPageView();
+    };
+
+    (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>-->
+<script src="js/utility/pageLoader.js"></script>
+<script src="js/utility/script.js"></script>s
 </body>
 </html>
