Updated about section, re-arranged segments in the header

--- a/about.html
+++ b/about.html
@@ -2,11 +2,17 @@
     <div class="container wow fadeInUp">
         <h3>who we are</h3>
         <img src="images/page-2_img01.jpg" alt="">
-        <h5 class="marg">Every great film should seem new every time you see it </h5>
-        <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. Donec porta diam eu massa. Quisque diam lorem interdum vitaapibus ac scelerisque vitae pede. Donec eget tellus non erat lacinia fermentum. Donec in velit vel ipsum auctovinar. Proin ullamcorper urna et felisstibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat ante. Lorem ipsum dolor sit met consectetuer adipiscing elit. Pellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi aliquet sit amet euismod in auctor ut ligula. Aliquam dapibus tincidunt metus. </p>
+        <h5 class="marg">State of the art film studio for all your needs. </h5>
+        <p>
+            Chitrayan Film Studio is one of the latest additions to the list of film studios in Kolkata.
+            It has all the facilities and services expected of a modern day studio. With spacious make-up rooms, a huge shooting floor, neat and clean environment Chitrayan keeps all your requirements in mind.
+            Be it films, reality shows or serials, Chitrayan is bound to impress you.
+            Being strategically located, it is accessible via private car, public buses, auto rickshaws and metro (under construction).
+            There have already been shootings of Bengali films, reality shows and serials. An experienced management team is ever present to cater to your demands.
+        </p>
     </div>
 </section>
-<section class="parallax parallax_3" data-url="images/parallax3.jpg">
+<!--<section class="parallax parallax_3" data-url="images/parallax3.jpg">
     <div class="container">
         <h3>awards</h3>
         <div class="row">
@@ -49,7 +55,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
 <section class="well5">
     <div class="container">
         <h3>our team</h3>
@@ -58,15 +64,15 @@
                 <div class="box3" data-equal-group="1">
                     <img src="images/page-2_img02.jpg" alt="">
                     <div class="box3_cnt">
-                        <h5>Mark Johnson</h5>
-                        <h6>Founder & Creative Director</h6>
+                        <h5>Arup Som</h5>
+                        <h6>Founder & Owner</h6>
                         <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>
-                        <ul class="social-list2">
+                        <!--<ul class="social-list2">
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                             <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
                             <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
             </div>
@@ -74,15 +80,15 @@
                 <div class="box3" data-equal-group="1">
                     <img src="images/page-2_img03.jpg" alt="">
                     <div class="box3_cnt">
-                        <h5>Jessica Priston</h5>
-                        <h6>Managing Director</h6>
+                        <h5>Sayantan Som</h5>
+                        <h6>Co-Owner</h6>
                         <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>
-                        <ul class="social-list2">
+                        <!--<ul class="social-list2">
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                             <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
                             <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
             </div>
@@ -90,19 +96,19 @@
                 <div class="box3" data-equal-group="1">
                     <img src="images/page-2_img04.jpg" alt="">
                     <div class="box3_cnt">
-                        <h5>Bradley Grosh</h5>
-                        <h6>Executive Producer</h6>
+                        <h5>Agniva Som</h5>
+                        <h6>Co-Owner</h6>
                         <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel curs. us eleifend elit. Aenean aucto.</p>
-                        <ul class="social-list2">
+                        <!--<ul class="social-list2">
                             <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                             <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
                             <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
             </div>
-            <div class="grid_3">
+            <!--<div class="grid_3">
                 <div class="box3" data-equal-group="1">
                     <img src="images/page-2_img05.jpg" alt="">
                     <div class="box3_cnt">
@@ -117,10 +123,11 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </section>
+<!--
 <section class="bg3 color1">
     <div class="container">
         <h2 class="sm">testimonials</h2>
@@ -148,4 +155,4 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
