--- a/index.html
+++ b/index.html
@@ -54,15 +54,6 @@
                         <a href="home.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="about.html">Location</a>
-                    </li>
-                    <li>
-                        <a href="about.html">Explore</a>
-                    </li>
-                    <li>
                         <a href="services.html">Services</a>
                         <ul style="z-index:1000;">
                             <li>
@@ -80,11 +71,20 @@
                         </ul>
                     </li>
                     <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Location</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Explore</a>
+                    </li>
+                    <!--<li>
                         <a href="news.html">News</a>
                     </li>
                     <li>
                         <a href="testimonials.html">Gallery</a>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="testimonials.html">Contact</a>
                     </li>
@@ -296,10 +296,10 @@
                                 eros.</p>
                         </div>
                     </div>
-                    <div class="grid_3">
+                    <!--<div class="grid_3">
                         <div class="box2">
                             <a href="#" class="box2_top">
-                                <div class="counter">02</div>
+                                <div class="counter">01</div>
                                 <h3>dvd</h3>
                             </a>
                             <h5><a href="#">Lorem ipsum</a></h5>
@@ -309,11 +309,11 @@
                                 neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
                                 eros.</p>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="grid_3">
                         <div class="box2">
                             <a href="#" class="box2_top">
-                                <div class="counter">03</div>
+                                <div class="counter">01</div>
                                 <h3>tv</h3>
                             </a>
                             <h5><a href="#">Lorem ipsum</a></h5>
@@ -327,7 +327,7 @@
                     <div class="grid_3">
                         <div class="box2">
                             <a href="#" class="box2_top">
-                                <div class="counter">04</div>
+                                <div class="counter">01</div>
                                 <h3>shows</h3>
                             </a>
                             <h5><a href="#">Lorem ipsum</a></h5>
@@ -382,17 +382,17 @@
                     </address>
                 </div>
                 <div class="grid_5">
-                    <h5>Follow us</h5>
-                    <ul class="social-list">
+                    <h5>Let others know</h5>
+                    <div class="fb-share-button" data-href="http://www.chitrayanfilmstudio.com" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.chitrayanfilmstudio.com%2F&amp;src=sdkpreparse">Share now</a></div>
+                    <!--<ul class="social-list">
                         <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                         <li><a href="#"><span class="fa fa-pinterest"></span></a></li>
                         <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                         <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                    </ul>
+                    </ul>-->
                 </div>
             </div>
             <!-- {%FOOTER_LINK} -->
-            <div class="fb-share-button" data-href="http://www.chitrayanfilmstudio.com" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.chitrayanfilmstudio.com%2F&amp;src=sdkpreparse">Share now</a></div>
         </div>
     </footer>
 </div>
