Location tab updated

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="about.html">Location</a>
+                        <a href="location.html">Location</a>
                     </li>
                     <li>
-                        <a href="about.html">Explore</a>
+                        <a href="explore.html">Explore</a>
                     </li>
                     <!--<li>
                         <a href="news.html">News</a>
