added studio section

--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                         <a href="services.html">Services</a>
                         <ul style="z-index:1000;">
                             <li>
-                                <a href="#">Indoor Studio Locations</a>
+                                <a href="studio.html">Indoor Studio</a>
                             </li>
-                            <li>
+                           <!-- <li>
                                 <a href="#">Outdoor Shooting</a>
+                            </li>-->
+                            <li>
+                                <a href="facilities.html">Facilities and Services</a>
                             </li>
                             <li>
-                                <a href="#">Facilities and Services</a>
-                            </li>
-                            <li>
-                                <a href="#">Infrastructure</a>
+                                <a href="infra.html">Infrastructure</a>
                             </li>
                         </ul>
                     </li>
@@ -207,21 +207,39 @@
                 <h3>Gallery</h3>
                 <div class="gallery">
                     <div id="isotop_filters" class="button-group">
-                        <span data-filter=".category01">Gallery 1</span>
-                        <span data-filter=".category02">Gallery 2</span>
-                        <span data-filter=".category03">Gallery 3</span>
-                        <span data-filter="*" class="is-checked">all galleries</span>
+                        <span data-filter=".category01">Shootings</span>
+                        <span data-filter=".category02">Studio Floor</span>
+                        <span data-filter=".category03">Services</span>
+                        <span data-filter="*" class="is-checked">All Galleries</span>
                     </div>
                     <div class="row isotop">
                         <div class="grid_4 isotop_item category01">
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img04_original.jpg">
-                                <img src="images/page-1_img04.jpg" alt="">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/1.jpg">
+                                <img src="images/chitrayan/shooting/1.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category01">
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img05_original.jpg">
-                                <img src="images/page-1_img05.jpg" alt="">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/2.jpg">
+                                <img src="images/chitrayan/shooting/2.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category01">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/3.jpg">
+                                <img src="images/chitrayan/shooting/3.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category01">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/4.jpg">
+                                <img src="images/chitrayan/shooting/4.jpg" alt="">
+                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                            </a>
+                        </div>
+                        <div class="grid_4 isotop_item category01">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/5.jpg">
+                                <img src="images/chitrayan/shooting/5.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
@@ -236,12 +254,6 @@
                         <div class="grid_4 isotop_item category03">
                             <a data-fancybox-group="1" class="thumb" href="images/page-1_img07_original.jpg">
                                 <img src="images/page-1_img07.jpg" alt="">
-                                <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
-                            </a>
-                        </div>
-                        <div class="grid_4 isotop_item category01">
-                            <a data-fancybox-group="1" class="thumb" href="images/page-1_img08_original.jpg">
-                                <img src="images/page-1_img08.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
