--- a/index.html
+++ b/index.html
@@ -215,37 +215,37 @@
                     <div class="row isotop">
                         <div class="grid_4 isotop_item category01">
                             <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/1.jpg">
-                                <img src="images/chitrayan/shooting/1.jpg" alt="">
+                                <img class="preview-image" src="images/chitrayan/shooting/1.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category01">
                             <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/2.jpg">
-                                <img src="images/chitrayan/shooting/2.jpg" alt="">
+                                <img class="preview-image" src="images/chitrayan/shooting/2.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category01">
                             <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/3.jpg">
-                                <img src="images/chitrayan/shooting/3.jpg" alt="">
+                                <img class="preview-image" src="images/chitrayan/shooting/3.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category01">
                             <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/4.jpg">
-                                <img src="images/chitrayan/shooting/4.jpg" alt="">
+                                <img class="preview-image" src="images/chitrayan/shooting/4.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category01">
                             <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/5.jpg">
-                                <img src="images/chitrayan/shooting/5.jpg" alt="">
+                                <img class="preview-image" src="images/chitrayan/shooting/5.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category02">
                             <a data-fancybox-group="1" class="thumb" href="images/page-1_img06_original.jpg">
-                                <img src="images/page-1_img06.jpg" alt="">
+                                <img class="preview-image" src="images/page-1_img06.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
@@ -253,13 +253,13 @@
                     <div class="row isotop">
                         <div class="grid_4 isotop_item category03">
                             <a data-fancybox-group="1" class="thumb" href="images/page-1_img07_original.jpg">
-                                <img src="images/page-1_img07.jpg" alt="">
+                                <img class="preview-image" src="images/page-1_img07.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category03">
                             <a data-fancybox-group="1" class="thumb" href="images/page-1_img09_original.jpg">
-                                <img src="images/page-1_img09.jpg" alt="">
+                                <img class="preview-image" src="images/page-1_img09.jpg" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
