changed images with lihtweights

--- a/studio.html
+++ b/studio.html
@@ -10,7 +10,7 @@
             Thanks to the spacious floor, multiple sets can be created thus saving time and money for our customers.<br/>
         </p>
         <br/>
-        <img src="images/chitrayan/studio/1.jpg" alt="">
+        <img src="images/chitrayan/studio/1.JPG" alt="">
         <h5 class="marg">Safe catwalk. </h5>
         <p>
             Catwalks are used to suspend lighting instruments and microphones directed at the stage. The catwalks provide easy access for theater personnel to perform common tasks.<br/>
@@ -18,7 +18,7 @@
             The catwalk is wide with support and railings to ensure the safety of the technicians.
         </p>
         <br/>
-        <img src="images/chitrayan/studio/5.jpg" alt="">
+        <img src="images/chitrayan/studio/5.JPG" alt="">
 
 
         <h5 class="marg">Glimpses of shootings. </h5>
@@ -29,7 +29,7 @@
 
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/1.jpg" alt="">
+                <img src="images/chitrayan/shooting/1.JPG" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
@@ -37,7 +37,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/2.jpg" alt="">
+                <img src="images/chitrayan/shooting/2.JPG" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
@@ -45,7 +45,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/3.jpg" alt="">
+                <img src="images/chitrayan/shooting/3.JPG" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
@@ -53,7 +53,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/4.jpg" alt="">
+                <img src="images/chitrayan/shooting/4.JPG" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Detective 2015 (Bengali Reality Show)</a></h5>
@@ -61,7 +61,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/5.jpg" alt="">
+                <img src="images/chitrayan/shooting/5.JPG" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Detective 2015 (Bengali Reality Show)</a></h5>
