--- a/index.html
+++ b/index.html
@@ -214,20 +214,20 @@
                     </div>
                     <div class="row isotop">
                         <div class="grid_4 isotop_item category01">
-                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/1.jpg">
-                                <img class="preview-image" src="images/chitrayan/shooting/1.jpg" alt="">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/1.JPG">
+                                <img class="preview-image" src="images/chitrayan/shooting/1.JPG" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category01">
-                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/2.jpg">
-                                <img class="preview-image" src="images/chitrayan/shooting/2.jpg" alt="">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/2.JPG">
+                                <img class="preview-image" src="images/chitrayan/shooting/2.JPG" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
                         <div class="grid_4 isotop_item category01">
-                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/3.jpg">
-                                <img class="preview-image" src="images/chitrayan/shooting/3.jpg" alt="">
+                            <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/3.JPG">
+                                <img class="preview-image" src="images/chitrayan/shooting/3.JPG" alt="">
                                 <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                             </a>
                         </div>
