--- a/index.html
+++ b/index.html
@@ -54,22 +54,32 @@
                         <a href="home.html">Home</a>
                     </li>
                     <li>
+                        <a href="studio.html">Studio</a>
+                    </li>
+                    <li>
+                        <a href="facilities.html">Facilities</a>
+                    </li>
+                    <li>
+                        <a href="infra.html">Infrastructure</a>
+                    </li>
+
+                    <!--<li>
                         <a href="services.html">Services</a>
                         <ul style="z-index:1000;">
                             <li>
                                 <a href="studio.html">Indoor Studio</a>
                             </li>
-                           <!-- <li>
+                           &lt;!&ndash; <li>
                                 <a href="#">Outdoor Shooting</a>
-                            </li>-->
+                            </li>&ndash;&gt;
                             <li>
-                                <a href="facilities.html">Facilities and Services</a>
+                                <a href="facilities.html">Facilities</a>
                             </li>
                             <li>
                                 <a href="infra.html">Infrastructure</a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="about.html">About</a>
                     </li>
@@ -114,9 +124,16 @@
                     </div>
                 </div>
                 <div id="camera" class="camera_wrap">
-                    <div data-src="images/page-1_slide01.jpg"></div>
-                    <div data-src="images/page-1_slide02.jpg"></div>
-                    <div data-src="images/page-1_slide03.jpg"></div>
+                    <!--<div data-src="images/chitrayan/carousel/9.JPG"></div>-->
+                    <div data-src="images/chitrayan/carousel/9.JPG"></div>
+                    <div data-src="images/chitrayan/carousel/1.JPG"></div>
+                    <div data-src="images/chitrayan/carousel/2.jpg"></div>
+                    <!--<div data-src="images/chitrayan/carousel/3.jpg"></div>-->
+                    <!--<div data-src="images/chitrayan/carousel/4.JPG"></div>-->
+                    <div data-src="images/chitrayan/carousel/5.JPG"></div>
+                    <!--<div data-src="images/chitrayan/carousel/6.JPG"></div>-->
+                    <!--<div data-src="images/chitrayan/carousel/7.JPG"></div>-->
+                    <div data-src="images/chitrayan/carousel/8.JPG"></div>
                 </div>
             </div>
         </div>
@@ -130,9 +147,9 @@
                 <div class="row">
                     <div class="grid_12">
                         <h2>chitrayan!</h2>
-                        <h5>Leader in providing shooting locations for producing feature films, made for TV movies,
+                        <h5>Leader in providing shooting locations for producing feature films. Ideal for movies,
                             dramatic, comedy and reality television series, as well as, factual and lifestyle
-                            programming.</h5>
+                            programs.</h5>
                     </div>
                 </div>
                 <div class="row">
