--- a/studio.html
+++ b/studio.html
@@ -53,7 +53,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/4.JPG" alt="">
+                <img src="images/chitrayan/shooting/4.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Detective 2015 (Bengali Reality Show)</a></h5>
@@ -61,7 +61,7 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/5.JPG" alt="">
+                <img src="images/chitrayan/shooting/5.jpg" alt="">
             </div>
             <div class="grid_6">
                 <h5><a href="#">Detective 2015 (Bengali Reality Show)</a></h5>
